' Generated by UML Generator
' Encoded: bPCnRy8m48Nt_0gFYGfHXquC28fArG6rAbMNgeDnBkcfYOti2u9I_dkT62SXmD0bYkxU-yw-bqmCSKrbaGVc6-MQQrumaNDZfaGQLoN1ar1oYJ_0ReClJ809r2A78AXLxDsMr1npOFk0iM5gtoGlOCIMrYwpgZQqZvj65_ObKTNEWER7UXWrvaCGe2JGAHV0PYe1OQSS_EZdB9kfOgt165JIjntiRRVkWPndyVBmUFTlLwsQSq5AxvnuRzT6A0uCjgHjexxLgDs6XTIcbd6FLaZm2Zm1tODeM-mJ1anKW2CdwYoqzTbaDg0fN9Lf2jfBhZcReqpB1DK2j_uSAMv3kuyofoQJSrDzi9aRw8r-VZ_I0KkLBdWNLrsfiz0SGPA3kFSmkZYgogYth8AZ3BdEZAT_V5h-Hc5I4Ivz577yEpx6SJd_Zk0awZWUju6SjvpZDDXJotdFUIOW4_lF_G4
' URL: http://www.plantuml.com/plantuml/uml/bPCnRy8m48Nt_0gFYGfHXquC28fArG6rAbMNgeDnBkcfYOti2u9I_dkT62SXmD0bYkxU-yw-bqmCSKrbaGVc6-MQQrumaNDZfaGQLoN1ar1oYJ_0ReClJ809r2A78AXLxDsMr1npOFk0iM5gtoGlOCIMrYwpgZQqZvj65_ObKTNEWER7UXWrvaCGe2JGAHV0PYe1OQSS_EZdB9kfOgt165JIjntiRRVkWPndyVBmUFTlLwsQSq5AxvnuRzT6A0uCjgHjexxLgDs6XTIcbd6FLaZm2Zm1tODeM-mJ1anKW2CdwYoqzTbaDg0fN9Lf2jfBhZcReqpB1DK2j_uSAMv3kuyofoQJSrDzi9aRw8r-VZ_I0KkLBdWNLrsfiz0SGPA3kFSmkZYgogYth8AZ3BdEZAT_V5h-Hc5I4Ivz577yEpx6SJd_Zk0awZWUju6SjvpZDDXJotdFUIOW4_lF_G4
' Generated on: 2026-01-15T17:16:05.134494148

@startuml
skinparam classAttributeIconSize 0
hide circle

class VideoFile {
  -filename: String
  --
  +VideoFile(filename: String)
  +getFilename(): String
}

interface Codec {
}

class OggCompressionCodec {
  +getType(): String
}

class MPEG4CompressionCodec {
  +getType(): String
}

class CodecFactory {
  +{static} extract(file: VideoFile): Codec
}

class BitrateReader {
  +{static} read(file: VideoFile, codec: Codec): String
  +{static} convert(buffer: String, codec: Codec): String
}

class AudioMixer {
  +fix(result: String): String
}

class VideoConverter {
  +convert(filename: String, format: String): File
}

class Client {
  +Client()
}

class VideoConversion {
  +{static} main(args: String[]): void
}

OggCompressionCodec ..|> Codec
MPEG4CompressionCodec ..|> Codec
CodecFactory ..> VideoFile
CodecFactory ..> Codec
BitrateReader ..> VideoFile
BitrateReader ..> Codec
@enduml